--- a/packages/plasma-new-hope/src/components/Notification/Notification.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Notification/Notification.template-doc.mdx
@@ -17,6 +17,8 @@ import { PropsTable, Description } from '@site/src/components';
 Также есть часть `actions`, в которой предполагается отображение кнопок для взаимодействия.
 
 ### Провайдер контекста
+<PropsTable name="NotificationsProvider" />
+
 Поместите `NotificationsProvider` в [корень приложения](../../#корень-приложения) или там, где будете применять модальные окна.
 В качестве свойств можно указать контейнер для оповещений через `frame` и расположение в контейнере через свойство `placement`, как `bottom-right` _(по умолчанию)_ или `bottom-left`.
 
@@ -40,19 +42,63 @@ ReactDOM.render(
 Оповещение закроется автоматически по истечению указанного `timeout` в миллисекундах или будет висеть вечно, если передан `0` или `null`.
 
 ```tsx live
-import React from 'react';
+import React, { useCallback } from 'react';
 import { Button, ButtonGroup, addNotification, closeNotification, NotificationsProvider } from '@salutejs/{{ package }}';
 
 export function App() {
-    const handleShow = React.useCallback(() => {
+    const handleShow = useCallback(() => {
         addNotification({
             id: 'incoming-call',
             title: 'Входящий вызов',
             children: 'Принять?',
-        }, 1000);
+        }, 3000);
     }, []);
 
-    const handleHide = React.useCallback(() => {
+    const handleHide = useCallback(() => {
+        closeNotification('incoming-call');
+    }, []);
+
+    return (
+        <NotificationsProvider>
+            <ButtonGroup>
+                <Button text="Показать оповещение" onClick={handleShow} />
+                <Button text="Скрыть оповещение" onClick={handleHide} />
+            </ButtonGroup>
+        </NotificationsProvider>
+    );
+}
+```
+
+## Вид иконки и текста
+:::tip
+Чтобы компонент иконки наследовал `color` от `view` используйте значение `inherit`.
+
+```tsx
+<IconBell color="inherit" size="xs" />
+```
+:::
+
+Также имеются свойства `titleColor, textColor` для **переопределения** `color` текста контента и заголовка.
+
+```jsx live
+import React, { useCallback } from 'react';
+import { IconBell } from '@salutejs/plasma-icons';
+import { Button, ButtonGroup, addNotification, closeNotification, NotificationsProvider } from '@salutejs/{{ package }}';
+
+export function App() {
+    const handleShow = useCallback(() => {
+        addNotification({
+            id: 'incoming-call',
+            title: 'Входящий вызов',
+            icon: <IconBell color="inherit" size="xs" />,
+            children: 'Принять?',
+            view: 'positive',
+            textColor: 'black',
+            titleColor: 'blue'
+        }, 3000);
+    }, []);
+
+    const handleHide = useCallback(() => {
         closeNotification('incoming-call');
     }, []);
 
