--- a/packages/plasma-new-hope/src/components/Autocomplete/Autocomplete.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Autocomplete/Autocomplete.template-doc.mdx
@@ -14,8 +14,10 @@ import TabItem from '@theme/TabItem';
 <PropsTable name="Autocomplete" />
 
 ## Использование
-Расширенная версия компонента `TextField`. Добавилась возможность использования выпадающего списка с подсказками.\
-По умолчанию подсказки фильтруются вне зависимости от регистра. Но это можно изменить, прокинув свой коллбэк `filter`.\
+Расширенная версия компонента `TextField`.
+
+Добавилась возможность использования выпадающего списка с подсказками.\
+По умолчанию подсказки фильтруются вне зависимости от регистра. Но это можно изменить, прокинув свой callback `filter`.\
 Все пропсы, которые поддерживает компонент `TextField` также поддерживаются и здесь.
 Формат подсказок `suggestions` следующий:
 
@@ -99,7 +101,7 @@ type SuggestionItem = {
             ];
 
             return (
-                <div style=\{{ display: 'block', height:"400px" }}>
+                <div style={{ display: 'block', height:"400px" }}>
                     <Autocomplete suggestions={mockData} listMaxHeight="250px" label="Label" placeholder="Placeholder" leftHelper="Введите имя Алексей" />
                 </div>
             );
@@ -168,7 +170,7 @@ type SuggestionItem = {
             const [value, setValue] = useState('')
 
             return (
-                <div style=\{{ display: 'block', height:"400px" }}>
+                <div style={{ display: 'block', height:"400px" }}>
                     <Autocomplete value={value} onChange={(e) => setValue(e.target.value)} onSuggestionSelect={(e) => setValue(e.label)} suggestions={mockData} listMaxHeight="250px" label="Label" placeholder="Placeholder" leftHelper="Введите имя Алексей" />
                 </div>
             );
@@ -176,7 +178,7 @@ type SuggestionItem = {
         ```
     </TabItem>
     <TabItem value="infinite" label="Infinite Loading">
-        Это пример с бесконечным лоадингом подсказок в списке. Для удобства порог для открытия списка подсказок понижен до 0 (открываться будет сразу при фокусе).
+        Это пример с бесконечным loading подсказок в списке. Для удобства порог для открытия списка подсказок понижен до 0 (открываться будет сразу при фокусе).
 
         ```tsx live
         import React from 'react';
@@ -261,7 +263,7 @@ type SuggestionItem = {
             };
 
             return (
-                <div style=\{{ display: 'block', height:"400px" }}>
+                <div style={{ display: 'block', height:"400px" }}>
                     <Autocomplete
                         suggestions={suggestions.data}
                         listMaxHeight="250px"
@@ -278,7 +280,7 @@ type SuggestionItem = {
         ```
     </TabItem>
     <TabItem value="filter" label="Custom Filter">
-        Пример кастомной фильтрации на бекенде. Не забываем отключить дефолтную фильтрацию.
+        Пример custom фильтрации на backend. Не забываем отключить дефолтную фильтрацию.
 
         ```tsx live
         import React from 'react';
@@ -355,7 +357,7 @@ type SuggestionItem = {
             }, [value])
 
             return (
-                <div style=\{{ display: 'block', height:"400px" }}>
+                <div style={{ display: 'block', height:"400px" }}>
                     <Autocomplete
                         value={value}
                         onChange={(e) => setValue(e.target.value)}
@@ -458,7 +460,7 @@ type SuggestionItem = {
             }
 
             return (
-                <div style=\{{ display: 'block', height:"400px" }}>
+                <div style={{ display: 'block', height:"400px" }}>
                     <Autocomplete
                         value={value}
                         onChange={(e) => setValue(e.target.value)}
@@ -476,72 +478,20 @@ type SuggestionItem = {
         }
         ```
     </TabItem>
-    <TabItem value="portal" label="Portal">
-        Иногда возникает необходимость вынесения выпадающего списка на уровни выше в DOM. К примеру, когда у родительского блока имеется скролл, и список будет обрезаться, чего хотелось бы избежать.\
-        Для такой реализации имеется пропс `portal`, который принимает либо `ref` либо `id` html-тега.
-        ```tsx live
+    <TabItem value="virtual" label="Virtual">
+        Свойство `virtual` позволяет виртуализировать выпадающий список. Для настройки высоты списка можно использовать свойство `listMaxHeight`.
+        Примечание: работает только при количестве отфильтрованных suggestions > 10, в противном случае виртуализация выключается автоматически.
+
+       ```tsx live
         import React from 'react';
         import { Autocomplete } from '@salutejs/{{ package }}';
 
         export function App() {
-            const mockData = [
-                { label: 'Алексей Смирнов' },
-                { label: 'Екатерина Иванова' },
-                { label: 'Дмитрий Петров' },
-                { label: 'Ольга Васильева' },
-                { label: 'Сергей Сидоров' },
-                { label: 'Мария Кузнецова' },
-                { label: 'Андрей Попов' },
-                { label: 'Анна Николаева' },
-                { label: 'Иван Федоров' },
-                { label: 'Наталья Морозова' },
-                { label: 'Михаил Павлов' },
-                { label: 'Елена Романова' },
-                { label: 'Владимир Киселев' },
-                { label: 'Татьяна Захарова' },
-                { label: 'Николай Семенов' },
-                { label: 'Юлия Белова' },
-                { label: 'Александр Гусев' },
-                { label: 'Оксана Яковлева' },
-                { label: 'Игорь Егорова' },
-                { label: 'Вера Тихомирова' },
-                { label: 'Артем Григорьев' },
-                { label: 'Евгения Козлова' },
-                { label: 'Максим Лебедев' },
-                { label: 'Виктория Калашникова' },
-                { label: 'Константин Абрамов' },
-                { label: 'Светлана Новикова' },
-                { label: 'Юрий Волков' },
-                { label: 'Валентина Воробьева' },
-                { label: 'Павел Сергеев' },
-                { label: 'Людмила Виноградова' },
-                { label: 'Антон Соловьев' },
-                { label: 'Маргарита Цветкова' },
-                { label: 'Роман Трофимов' },
-                { label: 'Лариса Зайцева' },
-                { label: 'Евгений Никитин' },
-                { label: 'Галина Михайлова' },
-                { label: 'Владислав Антонов' },
-                { label: 'Дарья Филатова' },
-                { label: 'Олег Буров' },
-                { label: 'Инна Медведева' },
-                { label: 'Вячеслав Крылов' },
-                { label: 'Тамара Беляева' },
-                { label: 'Кирилл Марков' },
-                { label: 'Марина Пономарева' },
-                { label: 'Борис Захаров' },
-                { label: 'Жанна Савельева' },
-                { label: 'Федор Жуков' },
-                { label: 'Елизавета Логинова' },
-                { label: 'Виктор Рыбаков' },
-                { label: 'Лилия Макарова' },
-            ];
-
-            const ref = useRef(null);
+            const items = Array(10000).fill(1).map((_, i) => ({ label: i.toString() }));
 
             return (
-                <div style=\{{ position: 'relative', display: 'block', height: "400px" }} ref={ref}>
-                    <Autocomplete suggestions={mockData} listMaxHeight="250px" label="Label" placeholder="Placeholder" leftHelper="Введите имя Алексей" portal={ref} />
+                <div style={{ display: 'block', height: "350px" }}>
+                    <Autocomplete suggestions={items} listMaxHeight="250px" label="Label" placeholder="Placeholder" leftHelper="Введите цифры" virtual />
                 </div>
             );
         }
@@ -553,7 +503,7 @@ type SuggestionItem = {
 
 Данный компонент соответствует требования W3C: [Combobox](https://www.w3.org/WAI/ARIA/apg/patterns/combobox/examples/combobox-autocomplete-list/).
 
-- `Tab, Escape` - закрывает автокомплит. Перемещает фокус на следующий элемент на странице;
+- `Tab, Escape` - закрывает Autocomplete. Перемещает фокус на следующий элемент на странице;
 - `Enter` - выбираем подсказку из списка;
 - `Home` - перемещает фокус на первый элемент;
 - `End` - перемещает фокус на последний элемент;
