--- a/packages/plasma-new-hope/src/components/Dropdown/Dropdown.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/Dropdown/Dropdown.template-doc.mdx
@@ -68,7 +68,7 @@ type Items = Array<{
          */
         color?: string;
         /**
-         * Айтем не активен
+         * Item не активен
          * @deprecated использовать disabled
          */
         isDisabled?: boolean;
@@ -84,269 +84,328 @@ type Items = Array<{
         import { Button, Dropdown } from '@salutejs/{{ package }}';
 
         export function App() {
-        const items = [
-    {
-        value: 'north_america',
-        label: 'Северная Америка',
-    },
-    {
-        value: 'south_america',
-        label: 'Южная Америка',
-        items: [
-    {
-        value: 'brazil',
-        label: 'Бразилия',
-        items: [
-    {
-        value: 'rio_de_janeiro',
-        label: 'Рио-де-Жанейро',
-    },
-    {
-        value: 'sao_paulo',
-        label: 'Сан-Паулу',
-    },
-        ],
-    },
-    {
-        value: 'argentina',
-        label: 'Аргентина',
-    },
-        ],
-    },
-        ];
+            const items = [
+                {
+                    value: 'north_america',
+                    label: 'Северная Америка',
+                },
+                {
+                    value: 'south_america',
+                    label: 'Южная Америка',
+                    items: [
+                        {
+                            value: 'brazil',
+                            label: 'Бразилия',
+                            items: [
+                                {
+                                    value: 'rio_de_janeiro',
+                                    label: 'Рио-де-Жанейро',
+                                },
+                                {
+                                    value: 'sao_paulo',
+                                    label: 'Сан-Паулу',
+                                },
+                            ],
+                        },
+                        {
+                            value: 'argentina',
+                            label: 'Аргентина',
+                        },
+                    ],
+                },
+            ];
 
 
-        return (
-        <div style=\{{ height:"300px" }}>
-        <Dropdown
-            items={items}
-        >
-            <Button text="Список стран" />
-        </Dropdown>
-    </div>
-    );
-    }
-    ```
-</TabItem>
+            return (
+                <div style={{ height:"300px" }}>
+                    <Dropdown
+                        items={items}
+                    >
+                        <Button text="Список стран" />
+                    </Dropdown>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
 
-<TabItem value="size" label="Size">
-    Размер `Dropdown` задается с помощью свойства `size`.<br />
-    Возможные значения свойства: `"l"`, `"m"`, `"s"` или `"xs"`.
+    <TabItem value="size" label="Size">
+        Размер `Dropdown` задается с помощью свойства `size`.<br />
+        Возможные значения свойства: `"l"`, `"m"`, `"s"` или `"xs"`.
 
-    ```tsx live
-    import React from 'react';
-    import { Button, Dropdown } from '@salutejs/{{ package }}';
+        ```tsx live
+        import React from 'react';
+        import { Button, Dropdown } from '@salutejs/{{ package }}';
 
-    export function App() {
-    const items = [
-{
-    value: 'north_america',
-    label: 'Северная Америка',
-},
-{
-    value: 'south_america',
-    label: 'Южная Америка',
-    items: [
-{
-    value: 'brazil',
-    label: 'Бразилия',
-    items: [
-{
-    value: 'rio_de_janeiro',
-    label: 'Рио-де-Жанейро',
-},
-{
-    value: 'sao_paulo',
-    label: 'Сан-Паулу',
-},
-    ],
-},
-{
-    value: 'argentina',
-    label: 'Аргентина',
-},
-    ],
-},
-    ];
+        export function App() {
+            const items = [
+                {
+                    value: 'north_america',
+                    label: 'Северная Америка',
+                },
+                {
+                    value: 'south_america',
+                    label: 'Южная Америка',
+                    items: [
+                        {
+                            value: 'brazil',
+                            label: 'Бразилия',
+                            items: [
+                                {
+                                    value: 'rio_de_janeiro',
+                                    label: 'Рио-де-Жанейро',
+                                },
+                                {
+                                    value: 'sao_paulo',
+                                    label: 'Сан-Паулу',
+                                },
+                            ],
+                        },
+                        {
+                            value: 'argentina',
+                            label: 'Аргентина',
+                        },
+                    ],
+                },
+            ];
 
-    return (
-    <div style=\{{ height: "300px", display: "flex", gap: "50px" }}>
-    <Dropdown
-        items={items}
-        size="l"
-    >
-        <Button text="Список стран" />
-    </Dropdown>
+            return (
+                <div style={{ height: "300px", display: "flex", gap: "50px" }}>
+                    <Dropdown
+                        items={items}
+                        size="l"
+                    >
+                        <Button text="Список стран" />
+                    </Dropdown>
 
-    <Dropdown
-        items={items}
-        size="m" // default
-    >
-        <Button text="Список стран" />
-    </Dropdown>
+                    <Dropdown
+                        items={items}
+                        size="m" // default
+                    >
+                        <Button text="Список стран" />
+                    </Dropdown>
 
-    <Dropdown
-        items={items}
-        size="s"
-    >
-        <Button text="Список стран" />
-    </Dropdown>
+                    <Dropdown
+                        items={items}
+                        size="s"
+                    >
+                        <Button text="Список стран" />
+                    </Dropdown>
 
-    <Dropdown
-        items={items}
-        size="xs"
-    >
-        <Button text="Список стран" />
-    </Dropdown>
-</div>
-);
-}
-```
-</TabItem>
+                    <Dropdown
+                        items={items}
+                        size="xs"
+                    >
+                        <Button text="Список стран" />
+                    </Dropdown>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
 
-<TabItem value="placement" label="Placement">
-    Параметр `placement` принимает либо строку: `"top"`,  `"right"`, `"bottom"`, `"left"`, `"auto"`, либо массив этих же значений, например: `["top", "bottom"]`.<br />
-    Default value для placement - `"bottom"`.
+    <TabItem value="placement" label="Placement">
+        Параметр `placement` может принимать следующие значения : `"top"`,  `"right"`, `"bottom"`, `"left"`, `"auto"`.<br />
+        Default value для placement - `"bottom"`.
 
-    ```tsx live
-    import React from 'react';
-    import { Button, Dropdown } from '@salutejs/{{ package }}';
+        ```tsx live
+        import React from 'react';
+        import { Button, Dropdown } from '@salutejs/{{ package }}';
 
-    export function App() {
-    const items = [
-{
-    value: 'north_america',
-    label: 'Северная Америка',
-},
-{
-    value: 'south_america',
-    label: 'Южная Америка',
-    items: [
-{
-    value: 'brazil',
-    label: 'Бразилия',
-    items: [
-{
-    value: 'rio_de_janeiro',
-    label: 'Рио-де-Жанейро',
-},
-{
-    value: 'sao_paulo',
-    label: 'Сан-Паулу',
-},
-    ],
-},
-{
-    value: 'argentina',
-    label: 'Аргентина',
-},
-    ],
-},
-    ];
+        export function App() {
+            const items = [
+                {
+                    value: 'north_america',
+                    label: 'Северная Америка',
+                },
+                {
+                    value: 'south_america',
+                    label: 'Южная Америка',
+                    items: [
+                        {
+                            value: 'brazil',
+                            label: 'Бразилия',
+                            items: [
+                                {
+                                    value: 'rio_de_janeiro',
+                                    label: 'Рио-де-Жанейро',
+                                },
+                                {
+                                    value: 'sao_paulo',
+                                    label: 'Сан-Паулу',
+                                },
+                            ],
+                        },
+                        {
+                            value: 'argentina',
+                            label: 'Аргентина',
+                        },
+                    ],
+                },
+            ];
 
-    return (
-    <div style=\{{ height: "300px", display: "flex", gap: "50px" }}>
-    <Dropdown
-        items={items}
-    >
-        <Button text="Список стран" />
-    </Dropdown>
+            return (
+                <div style={{ height: "300px", display: "flex", gap: "50px" }}>
+                    <Dropdown
+                        items={items}
+                    >
+                        <Button text="Default (bottom)" />
+                    </Dropdown>
 
-    <Dropdown
-        items={items}
-        placement="right"
-    >
-        <Button text="Список стран" />
-    </Dropdown>
+                    <Dropdown
+                        items={items}
+                        placement="right"
+                    >
+                        <Button text="Right" />
+                    </Dropdown>
 
-    <Dropdown
-        items={items}
-        placement="left"
-    >
-        <Button text="Список стран" />
-    </Dropdown>
+                    <Dropdown
+                        items={items}
+                        placement="left"
+                    >
+                        <Button text="Left" />
+                    </Dropdown>
 
-    <Dropdown
-        items={items}
-        placement={['top', 'bottom']}
-    >
-        <Button text="Список стран" />
-    </Dropdown>
-</div>
-);
-}
-```
-</TabItem>
+                    <Dropdown
+                        items={items}
+                        placement="top"
+                    >
+                        <Button text="Top" />
+                    </Dropdown>
 
-<TabItem value="trigger" label="Trigger">
-    Параметр `trigger` принимает строку: `"click"` или `"hover"`.<br />
-    Default value - `"click"`.<br />
-    Для примера показано значение `"hover"`.
+                    <Dropdown
+                        items={items}
+                        placement="auto"
+                    >
+                        <Button text="Auto" />
+                    </Dropdown>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
 
-    ```tsx live
-    import React from 'react';
-    import { Button, Dropdown } from '@salutejs/{{ package }}';
+    <TabItem value="trigger" label="Trigger">
+        Параметр `trigger` принимает строку: `"click"` или `"hover"`.<br />
+        Default value - `"click"`.<br />
+        Для примера показано значение `"hover"`.
 
-    export function App() {
-    const items = [
-{
-    value: 'north_america',
-    label: 'Северная Америка',
-},
-{
-    value: 'south_america',
-    label: 'Южная Америка',
-    items: [
-{
-    value: 'brazil',
-    label: 'Бразилия',
-    items: [
-{
-    value: 'rio_de_janeiro',
-    label: 'Рио-де-Жанейро',
-},
-{
-    value: 'sao_paulo',
-    label: 'Сан-Паулу',
-},
-    ],
-},
-{
-    value: 'argentina',
-    label: 'Аргентина',
-},
-    ],
-},
-    ];
+        ```tsx live
+        import React from 'react';
+        import { Button, Dropdown } from '@salutejs/{{ package }}';
 
+        export function App() {
+            const items = [
+                {
+                    value: 'north_america',
+                    label: 'Северная Америка',
+                },
+                {
+                    value: 'south_america',
+                    label: 'Южная Америка',
+                    items: [
+                        {
+                            value: 'brazil',
+                            label: 'Бразилия',
+                            items: [
+                                {
+                                    value: 'rio_de_janeiro',
+                                    label: 'Рио-де-Жанейро',
+                                },
+                                {
+                                    value: 'sao_paulo',
+                                    label: 'Сан-Паулу',
+                                },
+                            ],
+                        },
+                        {
+                            value: 'argentina',
+                            label: 'Аргентина',
+                        },
+                    ],
+                },
+            ];
 
-    return (
-    <div style=\{{ height:"300px" }}>
-    <Dropdown
-        items={items}
-        trigger="hover"
-    >
-        <Button text="Список стран" />
-    </Dropdown>
-</div>
-);
-}
-```
-</TabItem>
+            return (
+                <div style={{ height:"300px" }}>
+                    <Dropdown
+                        items={items}
+                        trigger="hover"
+                    >
+                        <Button text="Список стран" />
+                    </Dropdown>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+
+    <TabItem value="portal" label="Portal">
+        Иногда возникает необходимость вынесения выпадающего списка на уровни выше в DOM. К примеру, когда у родительского блока имеется scroll, и список будет обрезаться, чего хотелось бы избежать.\
+        Для такой реализации имеется пропс `portal`, который принимает либо `ref` либо `id` html-тега.
+
+        ```tsx live
+        import React, { useRef } from 'react';
+        import { Dropdown } from '@salutejs/{{ package }}';
+
+        export function App() {
+            const items = [
+                {
+                    value: 'north_america',
+                    label: 'Северная Америка',
+                },
+                {
+                    value: 'south_america',
+                    label: 'Южная Америка',
+                    items: [
+                        {
+                            value: 'brazil',
+                            label: 'Бразилия',
+                            items: [
+                                {
+                                    value: 'rio_de_janeiro',
+                                    label: 'Рио-де-Жанейро',
+                                },
+                                {
+                                    value: 'sao_paulo',
+                                    label: 'Сан-Паулу',
+                                },
+                            ],
+                        },
+                        {
+                            value: 'argentina',
+                            label: 'Аргентина',
+                        },
+                    ],
+                },
+            ];
+
+            const ref = useRef(null)
+
+            return (
+                <div style={{ position: "relative", height: "300px" }} ref={ref}>
+                    <Dropdown items={items} portal={ref}>
+                        <Button text="Список стран" />
+                    </Dropdown>
+                </div>
+            );
+        }
+        ```
+    </TabItem>
 </Tabs>
 
 ## Клавиатурная навигация
 
 Данный компонент соответствует требования W3C: [Combobox](https://www.w3.org/WAI/ARIA/apg/patterns/combobox/) и частично [TreeView](https://www.w3.org/WAI/ARIA/apg/patterns/treeview/).
 
-- `Tab` - закрывает dropdown. Перемещает фокус на следующий элемент на странице;
-- `Enter` - открывает/закрывает dropdown. Если на элементе - выбирает его;
-- `Space` - открывает/закрывает dropdown. Если на элементе - выбирает его;
-- `Home` - открывает dropdown и перемещает фокус на первый элемент;
-- `End` - открывает dropdown и перемещает фокус на последний элемент;
+- `Tab` - закрывает Dropdown. Перемещает фокус на следующий элемент на странице;
+- `Enter` - открывает/закрывает Dropdown. Если на элементе - выбирает его;
+- `Space` - открывает/закрывает Dropdown. Если на элементе - выбирает его;
+- `Home` - открывает Dropdown и перемещает фокус на первый элемент;
+- `End` - открывает Dropdown и перемещает фокус на последний элемент;
 - `PageUp` - перемещает фокус на 10 элементов выше либо в начало списка;
 - `PageDown` - перемещает фокус на 10 элементов ниже либо в конце списка;
-- `ArrowUp` - открывает dropdown и перемещает фокус на первый элемент. Перемещает фокус на один элемент выше;
-- `ArrowDown` - открывает dropdown и перемещает фокус на первый элемент. Перемещает фокус на один элемент ниже;
+- `ArrowUp` - открывает Dropdown и перемещает фокус на первый элемент. Перемещает фокус на один элемент выше;
+- `ArrowDown` - открывает Dropdown и перемещает фокус на первый элемент. Перемещает фокус на один элемент ниже;
 - `ArrowRight` - если фокус на элементе вложенного списка - открывает его и перемещает фокус на первый элемент;
 - `ArrowLeft` - закрывает текущий список и перемещает фокус на предыдущий;
